<resources>
    <string name="app_name">Museu dos Mistérios</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_proximo">Próximo</string>
    <string name="text_anterior">Anterior</string>
    <string name="text_voltar">Voltar</string>
    <string name="menu_jogar">Jogar</string>
    <string name="menu_instrucoes">Instruções</string>
    <string name="fonteFamily">serif</string>
        <string name="title_activity_play">Play</string>
        <string name="title_activity_regras">Regras</string>
        <string name="title_activity_capacete_17">Capacete_17</string>
        <string name="title_activity_moeda_15">Moeda_15</string>
        <string name="title_activity_esfinge_34">Esfinge_34</string>
        <string name="title_activity_capacete_28">Capacete_28</string>
        <string name="title_activity_capacete_20">Capacete_20</string>
        <string name="title_activity_vaso_26">Vaso_26</string>
        <string name="title_activity_moeda_27">Moeda_27</string>
        <string name="title_activity_esfinge_42">Esfinge_42</string>
        <string name="title_activity_sandalia_28">Sandalia_28</string>
        <string name="title_activity_sandalia_31">Sandalia_31</string>
        <string name="title_activity_moeda_6">Moeda_6</string>
        <string name="title_activity_passaro_32">Passaro_32</string>
        <string name="title_activity_passaro_34">Passaro_34</string>
        <string name="title_activity_moeda_16">Moeda_16</string>
        <string name="title_activity_moeda_36">Moeda_36</string>
        <string name="title_activity_esfinge_8">Esfinge_8</string>
        <string name="title_activity_sandalia_20">Sandalia_20</string>
        <string name="title_activity_capacete_26">Capacete_26</string>
        <string name="title_activity_capacete_32">Capacete_32</string>
        <string name="title_activity_vaso_28">Vaso_28</string>
        <string name="title_activity_sandalia_11">Sandalia_11</string>
        <string name="title_activity_passaro_22">Passaro_22</string>
        <string name="title_activity_passaro_27">Passaro_27</string>
        <string name="title_activity_sandalia_11_2">Sandalia_11_2</string>
        <string name="title_activity_esfinge_5">Esfinge_5</string>
        <string name="title_activity_esfinge_32">Esfinge_32</string>
        <string name="title_activity_sandalia_15">Sandalia_15</string>
        <string name="title_activity_vaso_37">Vaso_37</string>
        <string name="title_activity_esfinge_22">Esfinge_22</string>
        <string name="title_activity_sandalia_35">Sandalia_35</string>
        <string name="title_activity_vaso_15">Vaso_15</string>
        <string name="title_activity_moedas_9">Moedas_9</string>
        <string name="title_activity_vaso_6">Vaso_6</string>
        <string name="title_activity_esfinge_38">Esfinge_38</string>
        <string name="title_activity_vaso_31">Vaso_31</string>
        <string name="title_activity_capacete_22">Capacete_22</string>
        <string name="title_activity_capacete_14">Capacete_14</string>
        <string name="title_activity_passaro_7">Passaro_7</string>
        <string name="title_activity_moeda_33">Moeda_33</string>
        <string name="title_activity_passaro_12">Passaro_12</string>
        <string name="title_activity_capacete_37">Capacete_37</string>
        <string name="title_activity_sandalia_18">Sandalia_18</string>
        <string name="title_activity_moeda_31">Moeda_31</string>
        <string name="title_activity_capacete_41">Capacete_41</string>
        <string name="title_activity_passaro_10">Passaro_10</string>
        <string name="title_activity_passaro_42">Passaro_42</string>
        <string name="title_activity_moeda_12">Moeda_12</string>
        <string name="title_activity_sandalia_39">Sandalia_39</string>
        <string name="title_activity_sandalia_23">Sandalia_23</string>
        <string name="title_activity_sandalia_41">Sandalia_41</string>
        <string name="title_activity_moeda_19">Moeda_19</string>
        <string name="title_activity_vaso_43">Vaso_43</string>
        <string name="title_activity_sandalia_26">Sandalia_26</string>
        <string name="title_activity_passaro_5">Passaro_5</string>
        <string name="title_activity_vaso_14">Vaso_14</string>
        <string name="title_activity_moeda_41">Moeda_41</string>
        <string name="title_activity_esfinge_19">Esfinge_19</string>
        <string name="title_activity_esfinge_30">Esfinge_30</string>
        <string name="title_activity_capacete_10">Capacete_10</string>
        <string name="title_activity_vaso_33">Vaso_33</string>
        <string name="title_activity_moeda_39">Moeda_39</string>
        <string name="title_activity_capacete_8">Capacete_8</string>
        <string name="title_activity_vaso_21">Vaso_21</string>
        <string name="title_activity_moeda_38">Moeda_38</string>
        <string name="title_activity_esfinge_36">Esfinge_36</string>
        <string name="title_activity_passaro_29">Passaro_29</string>
        <string name="title_activity_vaso_11">Vaso_11</string>
        <string name="title_activity_vaso_39">Vaso_39</string>
        <string name="text_instrucoes_1">Você está pronto para uma fantástica aventura - com voltas e reviravoltas, muita ação e quebra-cabeças empolgantes para resolver? Então este livro foi feito para você!</string>
        <string name="text_instrucoes_2">Os problemas nessa aventura têm tudo a ver com números. Para resolvê-los, você deve usar seus conhecimentos sobre padrões numéricos, fatores, números primos e ordens e classes dos números. Para ajudar, há um glossário no fim do livro, na página 44. Lá você vai encontrar todos os métodos e sugestões de cálculos.</string>
        <string name="text_instrucoes_3">No decorrer da aventura, você terá de procurar pistas para resolver o mistério. Você deve anotá-las em sua caderneta de detetive e também coletar diferentes objetos para guardar em sua mochila. Tente se lembrar das pistas e dos objetos conforme os encontrar. Você vai precisar deles para completar a missão com sucesso.</string>
        <string name="text_instrucoes_4">Então, acha que está pronto? Vire a página e comece sua aventura!</string>
        <string name="text_introducao_1">No meio da noite, você é acordado por um ruído em sua caixa de correio. É uma carta:</string>
        <string name="text_introducao_2">Agora você está no museu e ficou trancado lá dentro, Mas não está sozinho -
            algo se esgueira pelas sombras. Você precisa seguir as pistas antes que a Coleção Dourada, o maior de todos os tesouros da Antiguidade, seja perdida para sempre! Primeiro você deve coletar objetos misteriosos; depois, irá usá-los para resolver o quebra-cabeça final. Você precisará de nervos de aço para isso!</string>
        <string name="capacete_5_1">Você coloca a flecha no arco e aponta para o dragão. Mas ele não tem medo.
            Você dispara a flecha e ela apenas ricocheteia no corpo dele.Essa é a flecha errada!
            20 é múltiplo de 2 e de 5, mas não de 3. Rápido - escolha outra flecha antes que seja tarde demais!</string>
        <string name="capacete_8_1">Você se aproxima da rede para olhar melhor. Alguém escreveu números atrás dela, na madeira. Você os vê
            através dos buracos. Eles formam um padrão, mas faltam alguns números. O que há de especial neles? E olhe&#8230; há um bilhete
            preso na rede&#8230;</string>
    <string name="capacete_8_2">"'Se os números que faltam são primos, você precisa procurar dentro de uma sacola viquingue. Se forem quadrados, espie o olho do viquingue.'"</string>
        <string name="capacete_13_1">Há um arco e várias flechas expostos.
            Cada flecha tem um número. Mas qual você deve usar? De repente, você vê uma instrução presa no alvo…</string>
        <string name="capacete_10">Você escolheu o escudo errado! O guerreiro viquingue volta à vida. Ele brande o machado em sua direção.
            Mas você usa o escudo para bloquear o golpe. O guerreiro cai, se desfazendo em poeira no chão. O dígito após o ponto decimal é
            "décimo". O decimal 0,6 significa seis décimos ou 6/10. Qual escudo tem dez partes, seis das quais são vermelhas?</string>
        <string name="capacete_14_1">Boa escolha! A placa balança. Atrás dela, você vê um buraco.
            Dentro do buraco há uma chave romana. É dela que você precisa para destrancar o portão de ferro!</string>
        <string name="capacete_14_2">Você põe a chave na mochila, pula para fora do mosaico e corre de
            volta ao saguão de entrada de onde vai seguir para outra ala do museu.</string>
        <string name="capacete_17_1">Você está parado no saguão de entrada. Quatro portas conduzem a direções diferentes.
            Você deve escolher um deles. Que ala do museu você deve visitar?</string>
        <string name="capacete_22_1">Nada acontece. Você apertou o número errado!
            O diagrama mostra onde fica o 100 em uma linha numérica. </string>
        <string name="esfinge_35_1">Você tira os três itens da mochila e os coloca sobre a mesa:
            um espelho brilhante, uma tábua de argila com uma escrita misteriosa e o pedaço de um mapa.</string>
        <string name="vaso_21">Sim - os números são todos quadrados! Um olho viquingue! - onde poderia estar? De repente, você o vê. Há uma
            enorme forma de olho pintada na vela do navio. Você sobe de volta no navio para observar.</string>
        <string name="vaso_26_1">Você põe a mão dentro do vaso. Alguma coisa peluda se esfrega em seus dedos!
            Você tira a mão imediatamente de lá. Uma tarântula gigante sai do vaso. Por sorte ela não mordeu!</string>
        <string name="vaso_26_2">Você escolheu o vaso errado: "cinco vezes cinco" é 25, não 24.</string>
        <string name="vaso_33_1">É o escudo certo! Você o tira do boneco e o vira. Embaixo dele há um pedaço de um mapa antigo. Você não sabe
            se vai precisar disso, mas o guarda na mochila. Há também uma mensagem na parte de trás do escudo:</string>
        <string name="vaso_33_2">"'Você está ganhando este jogo perigoso. Agora volte onde começou. Mas procure os números em uma
        rede, ainda precisa encontrar o amuleto!'"</string>
            <string name="moeda_27_1">Você põe a mão dentro do vaso e tateia. É o vaso certo!
                Você encontra seis discos de argila e um pedaço de papel com algumas instruções:</string>
        <string name="sandalia_20_1">Você deve descer a escadaria?
            Sem saber ao certo o que fazer, você lê a instrução seguinte no pergaminho:</string>
        <string name="sandalia_20_2">Você conclui que deve pisar só nos degraus na sequência 3, 6, 9&#8230;
            Mas será que deve incluir o degrau de número 16?</string>
        <string name="sandalia_31_1">Você vê a Exposição 14 imediatamente. É uma enorme coluna de pedra de um templo. Enquanto você anda em direção a ela, a coluna começa a tombar!
            Cuidado! Uma bola de pelo salta sobre o seu peito e o derruba para o lado. A coluna cai no chão - bem onde você estava. Quem ou o que quer você fora do caminho?</string>
        <string name="sandalia_31_2">Você escolheu o número errado. A regra para a sequência númerica nos discos é "somar 4". A sequência é 1, 5, 9, 13, 17, 21.</string>
        <string name="passaro_32_1">Escolheu a caixa errada! Você ergue a tampa e ouve um zumbido muito alto.
            Uma vespa enorme sai voando em direção ao seu pescoço. Vai picar você!</string>
        <string name="passaro_32_2">Você se enfia nas sombras sob a mesa. Confusa, a vespa voa em direção a janela
            iluminada pela lua.</string>
        <string name="passaro_32_3">Estes são os numerais romanos para os números 1 a 10. O numeral para 6 é VI, não IV.</string>
</resources>