<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_bg"
    tools:context="ufam.promobile.museudosmisterios.Vaso.Vaso_33">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaso_33_1"
        android:id="@+id/textView_vaso_33_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/fonteFamily"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaso_33_2"
        android:id="@+id/textView_vaso_33_2"
        android:layout_below="@+id/textView_vaso_33_1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/fonteFamily"
        android:textSize="23sp"
        android:textColor="@color/cor_fonte"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_proximo"
        android:id="@+id/textView_vaso_33_proximo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@string/fonteFamily"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"/>
</RelativeLayout>
