<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_bg"
    tools:context="ufam.promobile.museudosmisterios.Sandalia.Sandalia_31">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_sandala_31_1"
        android:text="@string/sandalia_31_1"
        android:textSize="22sp"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:layout_above="@+id/button_sandalia_31_anterior"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_anterior"
        android:id="@+id/button_sandalia_31_anterior"
        android:textSize="23sp"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_sandala_31_2"
        android:text="@string/sandalia_31_2"
        android:textSize="22sp"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="60dp" />


</RelativeLayout>
