<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_bg"
    tools:context="ufam.promobile.museudosmisterios.Vaso.Vaso_26">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_vaso_26_1"
        android:text="@string/vaso_26_1"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_voltar"
        android:id="@+id/button_vaso_26_anterior"
        android:background="@android:color/transparent"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_vaso_26_2"
        android:text="@string/vaso_26_2"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:layout_below="@+id/textViewTexto_vaso_26_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
