<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ufam.promobile.museudosmisterios.Passaro.Passaro_32"
    android:background="@color/app_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_passaro_32_1"
        android:text="@string/passaro_32_1"
        android:textSize="22sp"
        android:layout_below="@+id/textViewTexto_passaro_32_2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_proximo"
        android:id="@+id/button_passaro_32_proximo"
        android:textSize="23sp"
        android:background="@android:color/transparent"
        android:layout_below="@+id/imageView_passaro_32"
        android:layout_alignRight="@+id/textViewTexto_passaro_32_3"
        android:layout_alignEnd="@+id/textViewTexto_passaro_32_3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_anterior"
        android:id="@+id/button_passaro_32_anterior"
        android:textSize="23sp"
        android:background="@android:color/transparent"
        android:layout_below="@+id/imageView_passaro_32"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_passaro_32_2"
        android:text="@string/passaro_32_2"
        android:textSize="22sp"
        android:layout_below="@+id/textViewTexto_moeda_6_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_passaro_32"
        android:src="@drawable/passaro_32_romano"
        android:layout_below="@+id/textViewTexto_passaro_32_3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTexto_passaro_32_3"
        android:text="@string/passaro_32_3"
        android:textSize="22sp"
        android:layout_below="@+id/textViewTexto_passaro_32_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        />



</RelativeLayout>
