<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ufam.promobile.museudosmisterios.Capacete.Capacete_22"
    android:background="@color/app_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capacete_22_1"
        android:id="@+id/textView_capacete_22_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_voltar"
        android:id="@+id/button_capacete_22_voltar"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:background="@android:color/transparent"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_proximo"
        android:id="@+id/button_capacete_22_proximo1"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:background="@android:color/transparent"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_capacete_22"
        android:src="@drawable/capacete_22"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_below="@+id/textView_capacete_22_1"
        android:layout_above="@+id/button_capacete_22_voltar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_proximo"
        android:id="@+id/button_capacete_22_proximo2"
        android:textSize="@dimen/tam_font_normal"
        android:textColor="@color/cor_fonte"
        android:fontFamily="@string/fonteFamily"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
